Fixed broken links by removing z-index

--- a/frontend/css/layout.css
+++ b/frontend/css/layout.css
@@ -7,7 +7,6 @@
     position: fixed;
     height: 100%;
     width: 100%;
-    z-index: -1;
 }
 
 .sidebar {
